--- a/public/views/registro.html
+++ b/public/views/registro.html
@@ -1,8 +1,8 @@
 
-       <form class="form-auth" ng-submit="registro()">
+       <form class="form-auth" ng-submit="register()">
          <h2>Registro</h2>
-         <p class="text-warning">{{error_mensaje}}</p>
-         <input type="username" ng-model="usuario.username" placeholder="Usuario" class="form-control"><br>
-         <input type="password" ng-model="usuario.password" placeholder="password" class="form-control"><br>
-         <input type="submit" value="Registro" class="btn btn-primary"/>
+         <p class="text-warning">{{error_message}}</p>
+         <input type="username" ng-model="user.username" placeholder="Usuario" class="form-control"><br>
+         <input type="password" ng-model="user.password" placeholder="password" class="form-control"><br>
+         <input type="submit" value="Registrar" class="btn btn-primary"/>
        </form>
